[package]
name = "Catalyst"
version = "0.1.0"
edition = "2021"

[dependencies]
anstyle = "1.0.8"
clap = { version = "4.5.10", features = ["derive", "cargo"] }
colored = "2.1.0"
hex-rgb = "0.1.1"
git2 = "0.19.0"
hyperpolyglot = "0.1.7"
mlua = { version = "0.9.9", features = ["luau", "luau-jit", "async", "macros", "serialize"] }
phf = { version = "0.11.2", features = ["macros"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sysinfo = "0.30.13"
walkdir = "2.5.0"
glob = "0.3.1"
log4rs = "1.3.0"
log = "0.4.22"
fern = { version = "0.6.2", features = ["colored"] }
humantime = "2.1.0"
