[package]
name = "Catalyst"
version = "0.1.0"
edition = "2021"

[dependencies]
anstyle = "1.0.8"
clap = { version = "4.5.10", features = ["derive", "cargo"] }
colored = "2.1.0"
hex-rgb = "0.1.1"
git2 = "0.19.0"
hyperpolyglot = "0.1.7"
mlua = { version = "0.9.9", features = ["luau", "luau-jit", "async", "macros", "serialize"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sysinfo = "0.30.13"
glob = "0.3.1"
log = "0.4.22"
fern = { version = "0.6.2", features = ["colored"] }
whoami = "1.5.1"
reqwest = { version = "0.12.5", features = ["blocking"] }
zip = { version = "2.2.0", features = ["_all-features"] }
chrono = "0.4.38"
url = "2.5.2"
walkdir = "2.5.0"

[[bin]]
name = "cly"
path = "src/main.rs"

[[bin]]
name = "clyhandler"
path = "src/handler.rs"
